--- a/roguelike/build.gradle
+++ b/roguelike/build.gradle
@@ -19,6 +19,12 @@ repositories {
 }
 
 dependencies {
+    testCompile group: 'org.mockito', name: 'mockito-all', version: '1.9.+'
+    testCompile group: 'junit', name: 'junit', version: '4.12'
+
+    compile 'org.slf4j:slf4j-api:1.7.+'
+    compile 'ch.qos.logback:logback-classic:1.3.+'
+    compile 'ch.qos.logback:logback-core:1.3.+'
     compile "org.codetome.zircon:zircon:2017.4.0-RELEASE"
     compile "org.jetbrains.kotlin:kotlin-stdlib-jdk8:$kotlin_version"
 }
