--- a/grpc/build.gradle
+++ b/grpc/build.gradle
@@ -1,3 +1,6 @@
+group 'instant-messenger'
+version '1.0-SNAPSHOT'
+
 buildscript {
     ext.kotlin_version = '1.2.41'
 
@@ -10,9 +13,6 @@ buildscript {
     }
 }
 
-group 'instant-messenger'
-version '1.0-SNAPSHOT'
-
 apply plugin: 'java'
 apply plugin: 'kotlin'
 apply plugin: 'com.google.protobuf'
@@ -21,11 +21,8 @@ sourceCompatibility = 1.8
 
 sourceSets {
     main {
-        proto {
-            srcDir 'src/main/proto'
-        }
         java {
-            srcDirs 'src/main/java', 'src/generated/main/java'
+            srcDir 'build/generated/source/proto/main/java'
         }
     }
 }
@@ -43,8 +40,10 @@ protobuf {
     }
 
     generateProtoTasks {
-        ofSourceSet('main')*.plugins {
-            grpc {}
+        all()*.plugins {
+            grpc {
+                outputSubDir = 'java'
+            }
         }
     }
 }
