--- a/grpc/build.gradle
+++ b/grpc/build.gradle
@@ -9,7 +9,7 @@ buildscript {
     }
     dependencies {
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
-        classpath 'com.google.protobuf:protobuf-gradle-plugin:0.8.+'
+        classpath 'com.google.protobuf:protobuf-gradle-plugin:0.8.5'
     }
 }
 
@@ -29,13 +29,12 @@ sourceSets {
 
 protobuf {
     protoc {
-        artifact = 'com.google.protobuf:protoc:3.5.1'
-        generatedFilesBaseDir = "$projectDir/src/generated"
+        artifact = "com.google.protobuf:protoc:3.5.1-1"
     }
 
     plugins {
         grpc {
-            artifact = 'io.grpc:protoc-gen-grpc-java:1.+'
+            artifact = "io.grpc:protoc-gen-grpc-java:1.12.0"
         }
     }
 
